--- a/index.html
+++ b/index.html
@@ -4,67 +4,118 @@
   <meta charset="UTF-8">
   <title>Los Alfajores De Gordin</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      color: #222;
-      text-align: center;
+    /* Reset some defaults */
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Helvetica Neue', Arial, sans-serif;
+      background-color: #fff;
+      color: #222;
+      line-height: 1.6;
     }
 
     header {
-      background: linear-gradient(to right, #D91023, #fff, #D91023); /* Peruvian red & white */
+      position: relative;
+      background: #D91023;
       color: #fff;
-      padding: 40px 20px;
+      padding: 60px 20px 120px 20px;
+      text-align: center;
     }
 
     header h1 {
-      margin: 0;
-      font-size: 2.5em;
+      font-size: 3em;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
     }
 
     header p {
-      font-size: 1.2em;
-      margin: 10px 0 0 0;
-      color: #fff;
+      font-size: 1.3em;
+      font-weight: 300;
+    }
+
+    .hero-image {
+      position: absolute;
+      bottom: -60px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80%;
+      max-width: 600px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
 
     .order {
-      margin: 30px 0;
-      font-size: 1.5em;
+      margin: 100px 0 40px 0;
+      text-align: center;
+      font-size: 1.6em;
       color: #D91023;
       font-weight: bold;
     }
 
     section {
-      padding: 20px;
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: 0 auto;
     }
 
     section h2 {
-      color: #D91023;
       font-size: 2em;
-      margin-bottom: 20px;
+      color: #D91023;
+      margin-bottom: 25px;
+      text-align: center;
+    }
+
+    .photos {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 25px;
     }
 
     .photos img {
-      max-width: 200px;
-      margin: 10px;
-      border-radius: 8px;
+      max-width: 250px;
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .photos img:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.3);
     }
 
     .about {
-      max-width: 600px;
+      text-align: center;
+      max-width: 700px;
       margin: 0 auto;
-      font-size: 1.1em;
-      line-height: 1.5em;
+      font-size: 1.2em;
+      line-height: 1.6em;
     }
 
     footer {
       background-color: #D91023;
       color: #fff;
-      padding: 15px;
-      font-size: 0.9em;
+      padding: 20px;
+      text-align: center;
+      font-size: 0.95em;
+    }
+
+    @media(max-width: 600px){
+      header h1 {
+        font-size: 2.2em;
+      }
+
+      header p {
+        font-size: 1.1em;
+      }
+
+      .photos img {
+        max-width: 80%;
+      }
     }
   </style>
 </head>
@@ -73,15 +124,18 @@
 <header>
   <h1>Los Alfajores De Gordin</h1>
   <p>Authentic Peruvian alfajores made by Justo Rosell</p>
+  <img class="hero-image" src="7CFB23E2-E593-44F2-A37A-97FA37307EC6.png" alt="Alfajores hero">
 </header>
 
 <p class="order">Order via DM or WhatsApp: 786-582-8495</p>
 
-<section class="photos">
+<section>
   <h2>Our Alfajores</h2>
-  <img src="photo1.jpg" alt="Alfajor 1">
-  <img src="photo2.jpg" alt="Alfajor 2">
-  <img src="photo3.jpg" alt="Alfajor 3">
+  <div class="photos">
+    <img src="7CFB23E2-E593-44F2-A37A-97FA37307EC6.png" alt="Alfajor 1">
+    <img src="7a96bd18-3932-4994-8f9f-af563fbd7fa4.jpeg" alt="Alfajor 2">
+    <img src="52e97469-84ea-42ea-8ca0-f01f906978ae.jpeg" alt="Alfajor 3">
+  </div>
 </section>
 
 <section class="about">
