--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
   <img class="hero-image" src="7CFB23E2-E593-44F2-A37A-97FA37307EC6.png" alt="Alfajores hero">
 </header>
 
-<p class="order">Order via DM or WhatsApp: 786-582-8495</p>
+<p class="order">Contact us by WhatsApp: 786-582-8495</p>
 
 <section>
   <h2>Our Alfajores</h2>
   <div class="photos">
-    <img src="7CFB23E2-E593-44F2-A37A-97FA37307EC6.png" alt="Alfajor 1">
+
     <img src="7a96bd18-3932-4994-8f9f-af563fbd7fa4.jpeg" alt="Alfajor 2">
     <img src="52e97469-84ea-42ea-8ca0-f01f906978ae.jpeg" alt="Alfajor 3">
   </div>
