--- a/index.html
+++ b/index.html
@@ -140,7 +140,15 @@
 
 <section class="about">
   <h2>About Justo</h2>
-  <p>Made with love and family tradition in small batches, Los Alfajores De Gordin brings the authentic taste of Peru to your home. Perfect for gifting or indulging!</p>
+  <p>
+    Born in Peru and now living in Miami, FL, Justo has been cooking since childhood. He learned the art of baking from his mother, aunts, and the women in his life, and has spent years cooking for and raising his family. 
+  </p>
+  <p>
+    Always sharing smiles through his meals and treats, he is now bringing one of his favorite sweets—the alfajor—to the public. You can find his creations at local farmers markets. 
+  </p>
+  <p>
+    Connect on Instagram to see locations and times!
+  </p>
 </section>
 <section>
   <h2>Place Your Order</h2>
