--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
 
     <!-- Payment button placeholder for Stripe -->
     <button type="submit">Submit Order</button>
+    <form name="alfajores-order" method="POST" data-netlify="true" action="thankyou.html">
+  <input type="hidden" name="form-name" value="alfajores-order">
+  ...
   </form>
 </section>
 <footer>
